--- a/style.css
+++ b/style.css
@@ -10,9 +10,22 @@ htmls {
 }
 
 body {
+  background: #F7F7F7;
   margin: 0;
   padding: 0;
-  font-family: 'Public Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 1.3;
+}
+
+h1 {
+  background: #F7F7F7;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 40px;
   line-height: 1.3;
 }
 
@@ -40,10 +53,4 @@ body {
           align-items: center;
 }
 
-.header__navigation > span {
-  display: block;
-  width: 26px;
-  height: 2px;
-  background-color: #232023;
-}
 /*# sourceMappingURL=style.css.map */
