--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background: #F7F7F7;
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: 'Lato', sans-serif;
   font-weight: 100;
   font-size: 20px;
@@ -38,6 +39,28 @@ hr {
   background-color: #E4E4E4;
   height: 1.5px;
   border-width: 0;
+}
+
+#container {
+  min-height:100vh;
+  position:relative;
+}
+
+#header {
+  padding:0;
+}
+
+#body {
+  padding:10px;
+  padding-top: 0;
+  padding-bottom:60px;   /* Height of the footer */
+}
+
+#footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
 }
 
 .title{
@@ -121,13 +144,11 @@ ion-icon {
 .copyright {
   display: inline-block;
   padding-left: 14px;
-  padding-top: 25px;
+  padding-top: 21px;
   font-size: 16px;
   text-align: left;
-}
-
-.footer{
-  position:fixed;
+  font-weight: bolder;
+  color: #272727;
 }
 
  /*DESKTOP*/                                                                     
