--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ hr {
 
 #container {
   min-height:100vh;
+  box-sizing: border-box;
+  overflow: hidden;
   position:relative;
 }
 
@@ -60,11 +62,16 @@ hr {
   position:absolute;
   bottom:0;
   width:100%;
+  background-color:#F7F7F7;
   height:60px;   /* Height of the footer */
 }
 
 .title{
   flex:1 1 200px;
+}
+
+.titlelink {
+  text-decoration: none;
 }
 
 .links {
@@ -152,7 +159,7 @@ ion-icon {
 }
 
  /*DESKTOP*/                                                                     
- @media all and (orientation:landscape){
+@media all and (orientation:landscape){
 
   .grid_cell{
     float: left;
@@ -161,4 +168,48 @@ ion-icon {
   }
 }   
 
+@media only screen and (max-width:700px){
+
+  #header {
+    height: 140px;
+  }
+
+  nav{
+    width: 100%;
+    position: absolute;
+  }
+
+  h1 {
+    color: #272727;
+    margin: 0;
+    padding-left: 7px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 1.3;
+  }
+
+  .links {
+    display: flex;
+    text-align: center;
+    padding: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: #939799;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: bolder;
+  }
+
+  .selected{
+    color: #272727;
+  }
+
+  .title{
+    width: 100%;
+    text-align: center;
+    display: flex;
+  }
+  
+}
 /*# sourceMappingURL=style.css.map */
