--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ ion-icon {
 
   #header {
     height: 140px;
+    width: 100%;
   }
 
   nav{
@@ -192,7 +193,7 @@ ion-icon {
     text-align: center;
     padding: 25px;
     padding-top: 25px;
-    padding-right: 40px;
+    padding-right: 30px;
     color: #939799;
     text-decoration: none;
     font-size: 15px;
