mobile footer test pt 2

--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ ion-icon {
   .socials-list{
     list-style: none;
     text-decoration:none;
+    padding-left: 170px;
     float: left;
     position: relative;
   }
