added a bunch to aboutme

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ hr {
 }
 
 #body {
-  padding:10px;
+  padding:0;
   padding-top: 0;
   padding-bottom:60px;   /* Height of the footer */
 }
@@ -156,6 +156,67 @@ ion-icon {
   color: #272727;
 }
 
+.col_1{
+  width: 25%;
+  float: left;
+}
+
+.col_2{
+  width:75%;
+  float: right;
+}
+
+div picture img{
+  max-width: 90%;
+  max-height: 75%;
+  float:right;
+  padding:60px;
+}
+
+.headshot{
+  max-width: 90%;
+  max-height: 90%;
+  padding: 10px;
+}
+
+div h3{
+  text-align: center;
+  font-weight: 300;
+  padding-left: 14px;
+  padding-bottom: 10px;  
+}
+
+div h4{
+  text-align: center;
+  font-weight: 300;
+  padding-bottom: 14px;  
+}
+
+.CV{
+  width: 100%;
+  text-align: center;
+  padding-bottom: 15px;
+  text-decoration: none;
+}
+
+.CVlink{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding: 10px 10px;
+  text-decoration: none;
+  background-color:#939799;
+  color: #F7F7F7;
+  font-weight: 400;
+  font-size: 20px;
+  border-radius: 16px;
+}
+
+.CVlink:hover{
+  padding: 12px 12px;
+  font-size: 22px;
+}
+
  /*DESKTOP*/                                                                     
 @media all and (orientation:landscape){
 
@@ -166,6 +227,7 @@ ion-icon {
   }
 }   
 
+ /*MOBILE*/ 
 @media only screen and (max-width:700px){
 
   #header {
@@ -250,6 +312,41 @@ ion-icon {
     text-align: center;
     font-weight: bolder;
     color: #272727;
+  }
+
+  .col_1{
+    width: 100%;
+    padding:0;
+  }
+  
+  .col_2{
+    width:100%;
+    padding:0;
+  }
+
+  div picture img{
+    max-width: 100%;
+    max-height: 100%;
+    padding:10px;
+    padding-bottom:120px;
+  }
+  
+  .headshot{
+    max-width: 100%;
+    max-height: 100%;
+    padding: 10px;
+  }
+  
+  div h3{
+    text-align: center;
+    font-weight: 400;
+    padding-bottom: 10px;  
+  }
+  
+  div h4{
+    text-align: center;
+    font-weight: 300;
+    padding-bottom: 14px;  
   }
   
 }
