--- a/style.css
+++ b/style.css
@@ -178,34 +178,34 @@ div picture img{
 .headshot{
   display:block;
   margin:auto;
-  max-width: 60%;
-  max-height: 60%;
+  max-width: 50%;
+  max-height: 50%;
   padding: 5px;
 }
 
 div h3{
   text-align: center;
   font-weight: 300;
-  padding-bottom: 5px;  
+  padding-bottom: 0;  
 }
 
 div h4{
   text-align: center;
   font-weight: 300;
   font-size: 14px;
-  padding-bottom: 14px;  
+  padding-bottom: 10px;  
 }
 
 div h4 p{
   text-align: center;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .CV{
   width: 100%;
   text-align: center;
-  padding-bottom: 15px;
+  padding-bottom: 75px;
   text-decoration: none;
 }
 
@@ -240,18 +240,18 @@ div h4 p{
 /*TABLET*/ 
 @media only screen and (min-width:700px) and (max-width:1200px){
   .col_1{
-    width: 50%;
+    width: 49%;
     float: left;
   }
   
   .col_2{
-    width:50%;
+    width:49%;
     float: right;
   }
   
   div picture img{
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     display:block;
     margin:auto;
     padding-bottom:60px;
