--- a/style.css
+++ b/style.css
@@ -34,11 +34,21 @@ h1 {
   line-height: 1.3;
 }
 
+h1:hover{
+  color: #939799;
+}
+
 hr {
   color: #E4E4E4;
   background-color: #E4E4E4;
-  height: 1.5px;
+  height: 2.5px;
   border-width: 0;
+}
+
+#webpage{
+  max-width: 1100px;
+  border: inline-block;
+  margin: auto;
 }
 
 #container {
@@ -236,8 +246,9 @@ div h4 p{
     display:inline-block;
     margin:auto;
     width: 33%;
-    padding: 40px;
+    padding: 12px;
   }
+
 }
 
 /*TABLET*/ 
@@ -267,6 +278,7 @@ div h4 p{
     max-height: 65%;
     padding: 5px;
   }
+
 }
 
  /*MOBILE*/ 
@@ -332,7 +344,7 @@ div h4 p{
   .socials-list{
     list-style: none;
     text-decoration:none;
-    padding-left: 140px;
+    padding-left: 37vw;
     float: left;
     position: relative;
   }
@@ -393,6 +405,6 @@ div h4 p{
     font-size: 14px;
     padding-bottom: 14px;  
   }
-  
+
 }
 /*# sourceMappingURL=style.css.map */
