--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 
 body {
   background: #F7F7F7;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   height: 100%;
   font-family: 'Lato', sans-serif;
   font-weight: 100;
   font-size: 20px;
   line-height: 1.3;
+  text-align: center;
 }
 
 nav{
@@ -31,6 +32,7 @@ h1 {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 50px;
+  text-align: left;
   line-height: 1.3;
 }
 
@@ -246,13 +248,14 @@ div h4 p{
     display:inline-block;
     margin:auto;
     width: 33%;
-    padding: 12px;
+    padding: 1vw;
   }
 
 }
 
 /*TABLET*/ 
 @media only screen and (min-width:700px) and (max-width:1200px){
+
   .col_1{
     width: 49%;
     float: left;
