--- a/style.css
+++ b/style.css
@@ -160,12 +160,16 @@ ion-icon {
   color: #272727;
 }
 
+.construction{
+  font-size: 50px;
+}
+
 .copyright {
   display: inline-block;
-  padding-left: 14px;
+  padding-left: 120px;
   padding-top: 21px;
   font-size: 16px;
-  text-align: left;
+  text-align: center;
   font-weight: bolder;
   color: #272727;
 }
@@ -239,6 +243,14 @@ div h4 p{
 .CVlink:hover{
   padding: 12px 12px;
   font-size: 22px;
+}
+
+.construction-text{
+  text-align: center;
+  font-weight: 400;
+  padding-bottom: 5px;  
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
  /*DESKTOP*/                                                                     
@@ -365,6 +377,7 @@ div h4 p{
   .copyright {
     width: 100%;
     padding-top: 21px;
+    margin-left: -30vw;
     font-size: 16px;
     text-align: center;
     font-weight: bolder;
