--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
 * {
-  font-family: 'Lato';
-  box-sizing: border-box;
+  font-family: 'Tahoma';
 }
 
 body {
   background: #F7F7F7;
   margin: 0 auto;
-  padding: 0;
   height: 100%;
-  font-family: 'Lato', sans-serif;
   font-weight: 100;
   font-size: 20px;
   line-height: 1.3;
@@ -26,14 +23,12 @@ nav{
 
 h1 {
   color: #272727;
-  flex-grow: 1;
-  margin: 0;
-  padding-left: 14px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-size: 50px;
   text-align: left;
-  line-height: 1.3;
+  margin: 0;
+  font-weight: 300;
+  padding-left: 20px;
+  font-size: 50px;
+  font-family: 'Lato';
 }
 
 h1:hover{
@@ -58,10 +53,6 @@ hr {
   box-sizing: border-box;
   overflow: hidden;
   position:relative;
-}
-
-#header {
-  padding:0;
 }
 
 #body {
@@ -93,7 +84,7 @@ hr {
   padding-right: 40px;
   color: #939799;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bolder;
 }
 
@@ -177,45 +168,35 @@ ion-icon {
 /*ABOUT ME*/ 
 
 .col_1{
-  width: 40%;
+  width: 60%;
   float: left;
+  text-align: left;
 }
 
 .col_2{
-  width:60%;
+  width: 40%;
   float: right;
-}
-
-div picture img{
-  max-width: 100%;
-  max-height: 100%;
-  float:right;
-  padding:60px;
 }
 
 .headshot{
   display:block;
   margin:auto;
-  max-width: 50%;
-  max-height: 50%;
-  padding: 5px;
-}
-
-div h3{
-  text-align: center;
-  font-weight: 300;
-  padding-bottom: 0;  
+  margin-top: 50px;
+  margin-bottom: 50px;
+  max-width: 70%;
+  max-height: 70%;
+  padding: 0px;
+  border: 2.5px solid #E4E4E4;
+  /* border-radius: 500px; */
 }
 
 div h4{
-  text-align: center;
   font-weight: 300;
-  font-size: 14px;
+  font-size: 20px;
   padding-bottom: 10px;  
 }
 
 div h4 p{
-  text-align: center;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -233,11 +214,9 @@ div h4 p{
   text-align: center;
   padding: 10px 10px;
   text-decoration: none;
-  background-color:#939799;
-  color: #F7F7F7;
+  color: #272727;
   font-weight: 400;
   font-size: 20px;
-  border-radius: 16px;
 }
 
 .CVlink:hover{
