fixing mobile view

--- a/style.css
+++ b/style.css
@@ -187,7 +187,6 @@ ion-icon {
   max-height: 70%;
   padding: 0px;
   border: 2.5px solid #E4E4E4;
-  /* border-radius: 500px; */
 }
 
 div h4{
@@ -256,15 +255,7 @@ div h4 p{
     width:49%;
     float: right;
   }
-  
-  div picture img{
-    width: 100%;
-    height: 100%;
-    display:block;
-    margin:auto;
-    padding-bottom:60px;
-  }
-  
+
   .headshot{
     display:block;
     margin:auto;
@@ -292,7 +283,6 @@ div h4 p{
     color: #272727;
     margin: 0;
     padding-left: 7px;
-    font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 50px;
     line-height: 1.3;
@@ -331,7 +321,7 @@ div h4 p{
     bottom:0;
     width:100%;
     background-color:#F7F7F7;
-    height:120px;   /* Height of the footer */
+    height:100px;   /* Height of the footer */
   }
 
 
@@ -383,22 +373,22 @@ div h4 p{
   .headshot{
     display:block;
     margin:auto;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 40%;
+    max-height: 40%;
     padding: 5px;
   }
   
   div h3{
-    text-align: center;
+    text-align: left;
     font-weight: 400;
     padding-bottom: 5px;  
   }
   
   div h4{
-    text-align: center;
+    text-align: left;
     font-weight: 300;
     font-size: 14px;
-    padding-bottom: 14px;  
+    padding-bottom: 0;  
   }
 
 }
