--- a/style.css
+++ b/style.css
@@ -4,10 +4,9 @@
 
 body {
   background: #F7F7F7;
-  margin: 0 auto;
   height: 100%;
   font-weight: 100;
-  font-size: 20px;
+  font-size: 10px;
   line-height: 1.3;
   text-align: center;
 }
@@ -44,7 +43,6 @@ hr {
 
 #webpage{
   max-width: 1100px;
-  border: inline-block;
   margin: auto;
 }
 
@@ -56,8 +54,6 @@ hr {
 }
 
 #body {
-  padding:0;
-  padding-top: 0;
   padding-bottom:60px;   /* Height of the footer */
 }
 
@@ -97,14 +93,15 @@ hr {
 }
 
 .grid_cell{
+  float: left; 
   position: relative;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 1%;
+  width: 48%;
 }
 
 .grid_image{ /*grid images for each project*/
-  display: block;
-  width: 100%;
+  display:inline-block;
+  width:100%;
 }
 
 .cell_hover{
@@ -235,9 +232,9 @@ div h4 p{
 @media all and (orientation:landscape){
 
   .grid_cell{
-    display:inline-block;
-    margin:auto;
-    width: 33%;
+    float: left; 
+    width:30%;
+    position: relative;
     padding: 1vw;
   }
 
